postgresql-common (229) UNRELEASED; urgency=medium

  * postgresql-common.maintscript: We mistakenly tried to remove
    /etc/apt/apt.conf.d/01autoremove instead of 01autoremove-postgresql.
    Fix, and bump version to retry the removal.
  * pg_updateaptconfig: Fix a comment typo.
  * postgresql-server-dev-all: Mark dependency on make as :any.

 -- Christoph Berg <myon@debian.org>  Wed, 22 Sep 2021 22:20:43 +0200

postgresql-common (228) unstable; urgency=medium

  * postgresql-server-dev-all: Move to Arch: any, M-A: same to allow
    cross-compiling.
  * pg_buildext.pod: Use `B-D: postgresql-all <!nocheck>` in example.
  * Update doc/dependencies.* and install as .svg.
  * pg_virtualenv, postgresql-common.postrm: Use `command -v` instead of
    deprecated `which`.
  * Upgrade to debhelper 13; packaging still compatible with DH10 in stretch.
  * Add ${misc:Pre-Depends} to postgresql-common.
  * Install pg_backupcluster.1, pg_restorecluster.1, and pg_getwal.1 manpages.
  * Remove /etc/sysctl.d/30-postgresql-shm.conf, obsolete with current
    kernels and PG versions.

 -- Christoph Berg <myon@debian.org>  Thu, 16 Sep 2021 18:44:15 +0200

postgresql-common (227) unstable; urgency=medium

  * pgdg/apt.postgresql.org.sh, t/020_create_sql_remove.t: Support PG15.
  * pgxs.pm: Enable tests on hurd, it can run PostgreSQL now.

 -- Christoph Berg <myon@debian.org>  Tue, 31 Aug 2021 17:33:54 +0200

postgresql-common (226) experimental; urgency=medium

  [ Christoph Berg ]
  * pg_backupcluster, pg_restorecluster: New front-ends to pg_basebackup,
    pg_receivewal and pg_dump with systemd service/timer integration.
  * pg_dropcluster: Disable cluster and backup services on drop.
  * pg_upgradecluster: Deprecate vacuum_cleanup_index_scale_factor in 14.
  * Promote libjson-perl to Depends.
  * Move cluster owner verification from pg_ctlcluster to new PgCommon.pm
    function validate_cluster_owner and use it in pg_upgradecluster,